--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
@@ -39,9 +40,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "commander": "^7.2.0",
-    "debug": "^4.3.1",
-    "glob": "^7.1.6",
-    "node-fetch": "^2.6.1"
+    "@recordreplay/sourcemap-upload": "^0.1.0",
+    "commander": "^7.2.0"
   }
 }
