--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@recordreplay/sourcemap-upload-cli",
   "version": "0.1.0",
-  "description": "A utility library for uploading sourcemaps to Replay for use while replaying recordings.",
+  "description": "A CLI application for uploading sourcemaps to Replay for use while replaying recordings.",
   "bin": {
     "replay-sourcemap-upload": "bin/sourcemap-upload.js"
   },
@@ -31,9 +31,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
-    "@types/glob": "^7.1.3",
-    "@types/node-fetch": "^2.5.10",
-    "@types/debug": "^4.1.5",
     "@types/node": "^14.14.41",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
