--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   },
   "homepage": "https://github.com/recordreplay/sourcemap-upload-cli#readme",
   "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
-    "@types/node": "^14.14.41",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
